Fixing body height on mobile view.

--- a/public/assets/style/index.css
+++ b/public/assets/style/index.css
@@ -10,7 +10,7 @@
 body{
     background-color: rgba(224, 255, 244, 1);
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-size: cover;
     background-position: center;
     min-width: 520px;
@@ -36,6 +36,7 @@ body{
 
 .banner{
     background-color: rgba(160, 196, 255, 1);
+    width: 100%;
 }
 
 
